--- a/.config/wlogout/wallust/colors-wlogout.css
+++ b/.config/wlogout/wallust/colors-wlogout.css
@@ -1,6 +1,6 @@
 
-@define-color color1 #1F2627;
-@define-color color2 #463F3D;
-@define-color color3 #594B48;
-@define-color color4 #9A2E0A;
-@define-color color11 #776460;
+@define-color color1 #242322;
+@define-color color2 #484540;
+@define-color color3 #49473D;
+@define-color color4 #4B4843;
+@define-color color11 #615E51;
