--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -22,7 +22,7 @@ button:hover {
 
 #workspaces {
   border-radius:5px;
-  box-shadow:0px 0px black;
+  box-shadow: 0px 0px black;
   background: @background;
 }
 
@@ -41,7 +41,7 @@ button:hover {
 #custom-power {
   font-family: SF Pro;
   font-weight: bold;
-  font-size: 14;
+  font-size: 14px;
 }
 
 #clock,
@@ -58,7 +58,7 @@ button:hover {
 #custom-arch {
   font-family: SF Pro;
   font-weight: bold;
-  font-size: 20;
+  font-size: 20px;
   background: @background;
   border-radius: 5px;
   margin-right: 3px;
@@ -118,7 +118,7 @@ button:hover {
 #custom-cava {
   background: @background;
   border-radius: 5px 0px 0px 5px;
-  padding: 0 5px;
+  padding: 0px 5px;
 }
 
 #links {
@@ -132,7 +132,7 @@ button:hover {
 #custom-browser {
     font-family: SF Pro;
     font-weight: bold;
-    font-size: 16;
+    font-size: 16px;
     margin: 0px 2px;
     /* opacity: 0.9; */
     color: @foreground;
