--- a/.config/wlogout/wallust/colors-wlogout.css
+++ b/.config/wlogout/wallust/colors-wlogout.css
@@ -1,6 +1,6 @@
 
-@define-color color1 #242322;
-@define-color color2 #484540;
-@define-color color3 #49473D;
-@define-color color4 #4B4843;
-@define-color color11 #615E51;
+@define-color color1 #6C473D;
+@define-color color2 #47596E;
+@define-color color3 #BC465D;
+@define-color color4 #8675B5;
+@define-color color11 #FB5D7C;
