--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -4,8 +4,9 @@
 
 * {
   border: none;
-  font-family: Mononoki Nerd Font Mono;
-  font-size: 20px;
+  font-family: SF Pro Display;
+  font-weight: bold;
+  font-size: 14px;
   color: @foreground;
 }
 
@@ -19,29 +20,18 @@ button:hover {
   box-shadow: inset -3px -3px #ffffff;
 }
 
-
 #workspaces {
-  border-radius:5px;
+  border-radius: 5px;
   box-shadow: 0px 0px black;
   background: @background;
 }
 
-
-#cpu,
-#memory,
-#temperature,
-#clock,
-#battery,
-#network,
-#wireplumber,
-#backlight,
-#bluetooth,
-#custom-lizzy,
-#custom-weather,
-#custom-power {
-  font-family: SF Pro;
-  font-weight: bold;
-  font-size: 14px;
+#window {
+  background: @background;
+  border-radius: 0px 5px 5px 0px;
+  padding-left: 0.2em;
+  padding-right: 0.5em;
+  margin-right: 3px;
 }
 
 #clock,
@@ -56,13 +46,10 @@ button:hover {
 }
 
 #custom-arch {
-  font-family: SF Pro;
-  font-weight: bold;
   font-size: 20px;
   background: @background;
-  border-radius: 5px;
-  margin-right: 3px;
-  padding: 0px 13px 0px 8px;
+  border-radius: 5px 0px 0px 5px;
+  padding: 0px 8px 0px 8px;
 }
 
 #taskbar {
@@ -115,6 +102,18 @@ button:hover {
   margin-right: 3px;
 }
 
+#custom-system,
+#custom-space,
+#custom-separatorA,
+#custom-separatorB {
+  font-family: Mononoki Nerd Font Mono;
+  font-size: 20px;
+}
+
+#custom-separatorA,
+#custom-separatorB {
+  background: @background;
+}
 #custom-cava {
   background: @background;
   border-radius: 5px 0px 0px 5px;
