--- a/.config/wlogout/wallust/colors-wlogout.css
+++ b/.config/wlogout/wallust/colors-wlogout.css
@@ -1,6 +1,6 @@
 
-@define-color color1 #6C473D;
-@define-color color2 #47596E;
-@define-color color3 #BC465D;
-@define-color color4 #8675B5;
-@define-color color11 #FB5D7C;
+@define-color color1 #322E2C;
+@define-color color2 #373431;
+@define-color color3 #8E2A2C;
+@define-color color4 #585754;
+@define-color color11 #BD383B;
