--- a/.config/wlogout/wallust/colors-wlogout.css
+++ b/.config/wlogout/wallust/colors-wlogout.css
@@ -1,6 +1,6 @@
 
-@define-color color1 #322E2C;
-@define-color color2 #373431;
-@define-color color3 #8E2A2C;
-@define-color color4 #585754;
-@define-color color11 #BD383B;
+@define-color color1 #0D191D;
+@define-color color2 #251C22;
+@define-color color3 #43232C;
+@define-color color4 #383A3E;
+@define-color color11 #5A2F3A;
