--- a/.config/wlogout/style.css
+++ b/.config/wlogout/style.css
@@ -8,7 +8,7 @@
 }
 
 window {
-    background-image: image(url("../../.cache/swww/wp_blurred.png"));
+    background-image: image(url("../../.cache/swww/.wp_blurred.png"));
     background-size: cover;
 }
 
