--- a/.config/wlogout/wallust/colors-wlogout.css
+++ b/.config/wlogout/wallust/colors-wlogout.css
@@ -1,6 +1,6 @@
 
-@define-color color1 #0D191D;
-@define-color color2 #251C22;
-@define-color color3 #43232C;
-@define-color color4 #383A3E;
-@define-color color11 #5A2F3A;
+@define-color color1 #47444C;
+@define-color color2 #4C4A51;
+@define-color color3 #696166;
+@define-color color4 #6C6B70;
+@define-color color11 #8C8288;
