--- a/.config/wlogout/wallust/colors-wlogout.css
+++ b/.config/wlogout/wallust/colors-wlogout.css
@@ -1,6 +1,6 @@
 
-@define-color color1 #47444C;
-@define-color color2 #4C4A51;
-@define-color color3 #696166;
-@define-color color4 #6C6B70;
-@define-color color11 #8C8288;
+@define-color color1 #121B26;
+@define-color color2 #1D3B4A;
+@define-color color3 #37444B;
+@define-color color4 #694C4F;
+@define-color color11 #4A5A64;
