--- a/.config/matugen/templates/waybar-colors.css
+++ b/.config/matugen/templates/waybar-colors.css
@@ -1,3 +1,2 @@
-
-@define-color background rgba({{colors.surface.default.red}}, {{colors.surface.default.green}}, {{colors.surface.default.blue}}, 0.7);
+@define-color background alpha({{colors.surface.default.hex}}, 0.7);
 @define-color foreground {{colors.on_surface.default.hex}};
