--- a/.config/waybar/colors.css
+++ b/.config/waybar/colors.css
@@ -1,2 +1,2 @@
-@define-color background alpha(#1a110f, 0.7);
-@define-color foreground #f1dfda;
+@define-color background alpha(#191114, 0.7);
+@define-color foreground #eedfe3;
