--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -2,42 +2,49 @@
 @import "colors.css";
 
 * {
-    border: none;
     font-family: SF Pro Display;
     font-weight: bold;
     font-size: 14px;
     color: @foreground;
+    border: none;
+    box-shadow: none;
+    text-shadow: none;
 }
 
 window#waybar {
     background: transparent;
 }
 
-button:hover {
+#workspaces button:hover {
+    border-radius: 8px;
     background: inherit;
-    box-shadow: inset -3px -3px @foreground;
 }
 
 #workspaces {
-    border-radius: 5px;
+    border-radius: 8px;
     background: @background;
 }
 
 #window {
     background: @background;
-    border-radius: 5px;
+    border-radius: 8px;
+    padding-left: 0.5em;
+    padding-right: 0.5em;
+    margin-right: 3px;
+}
+
+#language {
+    background: @background;
+    border-radius: 8px 0px 0px 8px;
     padding-left: 0.5em;
     padding-right: 0.5em;
     margin-left: 3px;
 }
 
 #clock,
-#custom-lizzy,
-#custom-weather,
-#custom-notification,
-#custom-power {
+#custom-lizzy {
     background: @background;
-    border-radius: 5px;
+    border-radius: 8px;
     padding-left: 10px;
     padding-right: 10px;
 }
@@ -45,76 +52,40 @@ button:hover {
 #custom-arch {
     font-size: 18px;
     background: @background;
-    border-radius: 5px;
-    /*padding: 0px 13px 0px 8px;*/
+    border-radius: 8px;
     padding-right: 0.8em;
     padding-left: 0.4em;
     margin-right: 3px;
 }
 
-#tray,
-#custom-lizzy,
-#custom-weather {
+#custom-lizzy {
     margin-left: 3px;
-}
-
-#custom-space {
-    color: @background;
 }
 
 #wireless {
     background: @background;
-    border-radius: 0px 5px 5px 0px;
-    padding-right: 5px;
-    /*margin-right: 3px;*/
 }
 
 #hardware {
     background: @background;
-    padding-left: 2px;
-    padding-right: 8px;
+    border-radius: 0px 8px 8px 0px;
+    padding-right: 0.2em;
 }
 
 #telementry {
     background: @background;
-    border-radius: 5px 0px 0px 5px;
+    border-radius: 8px;
     padding-left: 5px;
     padding-right: 5px;
     margin-left: 3px;
 }
 
-#custom-system,
-#custom-space,
-#custom-separatorA,
-#custom-separatorB {
-    font-family: Mononoki Nerd Font Mono;
-    font-size: 18px;
-}
-
-#custom-separatorA,
-#custom-separatorB {
-    background: @background;
-}
-
 #custom-cava {
     background: @background;
-    border-radius: 5px 0px 0px 5px;
+    border-radius: 8px 0px 0px 8px;
     padding: 0px 5px;
 }
 
-#links {
-    margin: 0px 3px;
-    border-radius: 5px;
-    background-color: @background;
-}
-
-#custom-sh,
-#custom-fm,
-#custom-browser {
-    font-family: SF Pro;
-    font-weight: bold;
-    font-size: 16px;
-    margin: 0px 2px;
-    /* opacity: 0.9; */
-    color: @foreground;
+#custom-space {
+    color: @background;
 }
