--- a/.config/waybar/colors.css
+++ b/.config/waybar/colors.css
@@ -1,2 +1,2 @@
-@define-color background alpha(#131318, 0.7);
-@define-color foreground #e4e1e9;
+@define-color background alpha(#1a110f, 0.7);
+@define-color foreground #f1dfda;
