--- a/.config/waybar/colors.css
+++ b/.config/waybar/colors.css
@@ -1,2 +1,2 @@
-@define-color background alpha(#19120c, 0.7);
-@define-color foreground #efe0d5;
+@define-color background alpha(#191114, 0.7);
+@define-color foreground #eedfe3;
