--- a/.config/waybar/colors.css
+++ b/.config/waybar/colors.css
@@ -1,2 +1,2 @@
-@define-color background alpha(#191114, 0.7);
-@define-color foreground #eedfe3;
+@define-color background alpha(#121318, 0.7);
+@define-color foreground #e3e1e9;
