--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -4,7 +4,7 @@
 * {
   font-family: SF Pro Display;
   font-weight: bold;
-  font-size: 14px;
+  font-size: 1em;
   color: @foreground;
   border: none;
   box-shadow: none;
@@ -69,7 +69,7 @@ window#waybar {
 }
 
 #custom-menu {
-  font-size: 18px;
+  font-size: 1.2em;
   border-radius: 8px;
   padding-right: 0.8em;
   padding-left: 0.4em;
@@ -78,7 +78,7 @@ window#waybar {
 
 #custom-battery {
   font-weight: normal;
-  font-size: 16px;
+  font-size: 1.2em;
 }
 
 #custom-player {
