--- a/.config/waybar/colors.css
+++ b/.config/waybar/colors.css
@@ -1,2 +1,2 @@
-@define-color background alpha(#0e1415, 0.7);
-@define-color foreground #dde4e3;
+@define-color background alpha(#1a1112, 0.7);
+@define-color foreground #f0dede;
