--- a/.config/matugen/templates/waybar-colors.css
+++ b/.config/matugen/templates/waybar-colors.css
@@ -1,2 +1,2 @@
-@define-color background alpha({{colors.surface.default.hex}}, 0.7);
+@define-color background alpha({{colors.background.default.hex}}, 0.7);
 @define-color foreground {{colors.on_surface.default.hex}};
