--- a/.config/waybar/colors.css
+++ b/.config/waybar/colors.css
@@ -3,5 +3,5 @@
 * Generated with Matugen
 */
 
-@define-color background alpha(#191114, 0.7);
-@define-color foreground #eedfe3;
+@define-color background alpha(#111414, 0.7);
+@define-color foreground #e2e2e2;
